// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeSlider /> Snapshots should match the snapshot when <RangeSlider /> is disabled 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root Mui-disabled MuiSlider-colorPrimary MuiSlider-sizeMedium css-16b9jz-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb Mui-disabled MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb Mui-disabled MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0"
        data-index="0"
        disabled=""
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when <RangeSlider /> label is on 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-1dfi1up-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
      style="left: 0%; width: 30%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 30%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        aria-valuetext="30"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="30"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabelOpen MuiSlider-valueLabel css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            30
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have just one handle 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-1jfcvfl-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
      style="left: 0%; width: 10%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 10%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        aria-valuetext="10"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="10"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabel css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            10
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have two handles 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-1jfcvfl-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
      style="left: 10%; width: 20%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 10%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        aria-valuetext="10"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="10"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabel css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            10
          </span>
        </span>
      </span>
    </span>
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="1"
      style="left: 30%;"
    >
      <input
        aria-label="1"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        aria-valuetext="30"
        data-index="1"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="30"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabel css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            30
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;
